@@ -21,6 +21,15 @@
 </tr>
 </table>
 <p>
+2010-09-08  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> Magick++/lib/Image.cpp (backgroundColor, borderColor, matteColor):
+        Opacity part of user-specified color needs to be preserved.
+        Problem was reported by Alexander Zheltov.
+
+</UL>
+<p>
 2010-09-07  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
