@@ -1,3 +1,9 @@
+2010-09-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* Magick++/lib/Image.cpp (backgroundColor, borderColor, matteColor):
+	Opacity part of user-specified color needs to be preserved.
+	Problem was reported by Alexander Zheltov.
+
 2010-09-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* Makefile.am: Applied Automake 1.11.1 patch by Ralf Wildenhues
